<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActividadBBDD">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IntrNombreGrup"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtNacionalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IntroNacGrupo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IntroGen"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtYearCreacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IntrYear"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="insertarRegistro"
        android:text="@string/InseGrupo" />

    <ListView
        android:id="@+id/lstGrupos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>